# ABS_OOP_program_Burnyshev_Nikolai_BPI201

./: CMakeLists.txt  Container.cpp  Container.h  DiagonalMatrix.cpp  DiagonalMatrix.h  Matrix.cpp  Matrix.h  README.md  SquareMatrix.cpp  SquareMatrix.h  TriangleMatrix.cpp  TriangleMatrix.h  main.cpp  Картинка архитектуры.HEIC
tests/test_1_(hand_formation)/: out_data_sorted  time_consumption
tests/test_2_(hand_formation)/: out_data  out_data_sorted  time_consumption
tests/test_3_automatical/: out_data  out_data_sorted  psevdo_enter_data  time_consumption
tests/test_4_automatical/: out_data  out_data_sorted  psevdo_enter_data  time_consumption
tests/test_5_automatical/: out_data  out_data_sorted  psevdo_enter_data  time_consumption
